--- a/app/views/bookers/show.html.erb
+++ b/app/views/bookers/show.html.erb
@@ -1,7 +1,8 @@
+<p id= "notice" ><%= notice %></p>
 <h2>Title</h2>
 <p><%= @booker.title %></p>
 <h2>Body</h2>
-<p><%= @booler.body %></p>
+<p><%= @booker.body %></p>
 <p><%= link_to "edit", edit_booker_path(@booker) %> |
-<%= link_to "back", :back%>
+<%= link_to "back", bookers_path %>
 </p>
