--- a/app/views/bookers/index.html.erb
+++ b/app/views/bookers/index.html.erb
@@ -1,12 +1,39 @@
 <h1>Books</h1>
-<h4>Title</h4>
-<h4>Body</h4>
+<table>
+  <thead>
+<tr>
+<th>Title</th>
+
+<th>Body</th>
+<th colspan = "3"></th>
+</tr>
+</thead>
+
 <% @bookers.each do |booker| %>
- <p>Title</p>
-  <span><%= booker.title %></span>
- <p>Body</p>
-  <span><%= booker.body %></span>
-  <%= link_to "show", booker_path(booker.id) %>
-  <%= link_to "edit", edit_booker_path(booker.id) %>
-  <%= link_to "destroy", destroy_booker_path(booker.id), method: :delete, "data-confirm" => "Are you sure?" %>
+<tr>
+  <td><%= booker.title %></td>
+  <td><%= booker.body %></td>
+  <td><%= link_to "show", booker_path(booker.id) %></td>
+  <td><%= link_to "edit", edit_booker_path(booker.id) %></td>
+  <td><%= link_to "destroy", booker_path(booker.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
+  </tr>
+<% end %>
+</table>
+
+<h1>New book</h1>
+<% if @booker.errors.any? %>
+  <%= @booker.errors.count %>errors prohibited this book from being saved
+  <ul>
+  <% @booker.errors.full_messages.each do |message| %>
+   <li><%= message %></li>
   <% end %>
+  </ul>
+<% end %>
+
+<%= form_with model: @booker, url:'/bookers', local:true do |f| %>
+<h4>Title</h4>
+<%= f.text_field :title %>
+<h4>Body</h4>
+<%= f.text_area :body %>
+<%= f.submit 'Create book' %>
+<% end %>
